# hip_cxxf_cmake

./: CMakeLists.txt  README.md  hello.F90  vectoradd.cxx
cmake/: hip-config.cmake
